--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1083,4 +1083,5 @@ svg{
 @import "_advantages";
 @import "_level-floor";
 @import "_filter";
-@import "special";
+@import "_special";
+@import "_location";
