--- a/sass/_filter.scss
+++ b/sass/_filter.scss
@@ -1,3 +1,6 @@
+/* ====================================*/
+/*!filter HappyHouse(1.2). (C) June 2018 Anna Begas. */
+/* ==================================== */
 input[type="submit"] {
   outline: none;
 }
