--- a/sass/_developer.scss
+++ b/sass/_developer.scss
@@ -52,3 +52,35 @@
     height: 30px;
   }
 }
+@media only screen and (max-width: 768px) {
+  .developer_block{
+    .line_link{
+      margin-bottom: 0;
+    }
+    .content_subname{
+      font-size: 20px;
+    }
+    .bx-wrapper .bx-controls-direction a {
+      width: 40px;
+      height: 40px;
+      padding: 12px;
+    }
+  }
+  .developer_box {
+    padding: 20px 10px;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+}
+.developer_logo {
+    width: 100%;
+    max-width: 200px;
+}
+.developer_info {
+    width: 100%;
+    padding: 20px 0px;
+}
+.developer_icon{
+  width: 10%;
+}
+
+}
