--- a/sass/_filter.scss
+++ b/sass/_filter.scss
@@ -213,6 +213,7 @@ input::-webkit-inner-spin-button {
   padding: 12px 0;
   transition: 0.35s;
   -webkit-transition: 0.35s;
+  color: #ffffff;
   }
 .button:hover{
   background: darken($red, 10%);
@@ -260,7 +261,13 @@ input[type="submit"]{
 }
 .result__item {
   width: 49%;
-  padding: 20px 10px;
+  padding: 0px;
+}
+.reset-button {
+  margin-bottom: 16px;
+}
+.filter__info{
+  line-height: 1.6;
 }
 }
 @media only screen and (max-width:480px) {
