--- a/sass/_infra.scss
+++ b/sass/_infra.scss
@@ -98,3 +98,10 @@
     top:120px;
   }
 }
+@media only screen and (max-width: 768px) {
+.infra__block{
+  .section__name {
+    width: 60%;
+  }
+}
+}
