--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -91,6 +91,7 @@
   justify-content: center;
   -webkit-justify-content: center;
   margin: 30px 0;
+  visibility: hidden;
 }
 .icon_wrap{
   width: 100px;
