--- a/sass/_advantages.scss
+++ b/sass/_advantages.scss
@@ -11,7 +11,7 @@
   margin-bottom: 20px;
 }
 .advantages__name{
-  width: 40%;
+  width: 100%;
   font-size: 24px;
   height: 100%;
   position: relative;
@@ -26,8 +26,9 @@
   display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-justify-content: flex-end;
-  // -webkit-align-items: center;
-
+  transition: 1.4s;
+  -webkit-transitiion:1.4s;
+  transition-timing-function: ease-in-out;
   &:before{
     content: '';
     position: absolute;
@@ -54,6 +55,11 @@
   .smile_line{
     margin: 20px auto 80px 0;
   }
+}
+  // -webkit-align-items: center;
+
+  .advantages__name_active{
+    width: 40%;
 }
 .advantages__number{
   position: absolute;
