--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -74,6 +74,8 @@ ul.bxslider {
   .bx-wrapper .bx-controls-direction a svg{
     width: 100%;
     height: 100%;
+    max-width: 18px;
+    max-height: 18px;
   }
 .bx-wrapper .bx-controls-direction a.disabled {
   display: none;
